--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+<!-- index.html -->
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,14 +8,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 
-
 <style>
     html, body { height: 100%; scroll-behavior: smooth; }
     body {
         font-family: 'VT323', monospace;
         color: #e5e5e5;
         background-color: #000000; 
-        background-image: url('IMG_4928.jpeg'); 
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -106,10 +104,8 @@
     }
 </style>
 
-
 </head>
 <body>
-
 
 <nav class="fixed left-0 top-1/2 -translate-y-1/2 p-6 sm:p-8 pixel-font z-10">
     <h1 class="text-3xl lg:text-4xl text-gray-300 mb-2" style="color: #bebebe;"></h1>
