--- a/login.html
+++ b/login.html
@@ -153,7 +153,7 @@
     // These names cannot be created by strangers.
     const RESERVED_ADMINS = ['-nl', 'admin', 'root'];
     // The master password for the names above.
-    const SYSTEM_PASSWORD = "canvas2025"; 
+    const SYSTEM_PASSWORD = "sixandseven"; 
 
     // Set random background
     const normalBackgrounds = [
