--- a/chat.html
+++ b/chat.html
@@ -113,7 +113,7 @@
                 </svg>
             </button>
             <div id="user-dropdown" class="dropdown">
-                <a href="#" id="display-name" style="color:#fff; pointer-events:none;">GUEST</a>
+                <a href="#" id="display-name" style="color:#fff; pointer-events:none;"></a>
                 <a href="/account">ACCOUNT</a>
                 <a href="/settings">SETTINGS</a>
                 <a href="#" onclick="logout()">LOGOUT</a>
