--- a/account.html
+++ b/account.html
@@ -114,7 +114,7 @@
 
         <img id="profilePicture" class="pfp-main" src="https://placehold.co/300x300/111/facc15?text=?">
         
-        <div id="adminStatus" class="admin-tag" style="display:none;">SYS_OPERATOR</div>
+        <div id="adminStatus" class="admin-tag" style="display:none;">founder</div>
         <h1 class="username" id="usernameDisplay">@username</h1>
         
         <div class="bio" id="userBio">
