--- a/account.html
+++ b/account.html
@@ -122,8 +122,8 @@
         </div>
 
         <div style="display: flex; gap: 20px; color: #555; font-size: 1.1rem;">
-            <span>POSTS: <span id="postCount" style="color:#969696">0</span></span>
-            <span>LEVEL: <span style="color:#969696">1</span></span>
+            <span> <span id="postCount" style="color:#969696">0</span></span>
+            <span> <span style="color:#969696">1</span></span>
         </div>
 
         <a href="index.html" class="nav-back"><< BACK_TO_HOME</a>
