--- a/chat.html
+++ b/chat.html
@@ -52,7 +52,7 @@
             padding: 10px;
             display: flex;
             gap: 8px;
-            background: rgba(0, 0, 0, 0.4); /* Slightly darker input area */
+            background: transparent; /* Slightly darker input area */
         }
 
         input {
