--- a/chat.html
+++ b/chat.html
@@ -149,7 +149,7 @@
         </div>
     </div>
 
-    <script type="module" src="chat-page-logic.js"></script>
+    <script type="module" src="chat.js"></script>
     
     <script>
         function toggleMenu() {
