--- a/register.html
+++ b/register.html
@@ -101,7 +101,7 @@
 
     <div class="register-card">
         <h1></h1>
-        <p>name</p>
+        <p>sign up</p>
 
         <div id="error-display" class="error-msg"></div>
 
