--- a/register.html
+++ b/register.html
@@ -116,7 +116,7 @@
         </div>
 
         <div class="input-group">
-            <label>one more time sorry</label>
+            <label>say that again..</label>
             <input type="password" id="reg-confirm" placeholder="Repeat password...">
         </div>
 
