--- a/register.html
+++ b/register.html
@@ -111,7 +111,7 @@
         </div>
 
         <div class="input-group">
-            <label>passworr</label>
+            <label>password</label>
             <input type="password" id="reg-password" placeholder="Create password...">
         </div>
 
