--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 </div>
 
 <div class="fixed top-0 right-0 p-4 pixel-font text-yellow-400 text-sm sm:text-base text-right z-10">
-    <a href="chat.html" class="hover:text-red-900 block mb-1">version 2.0</a>
+    <a href="chat.html" class="hover:text-red-900 block mb-1">3</a>
     <p id="welcome-message">Welcome, ?</p>
     <a href="account.html" id="account-link" class="text-xs hover:text-yellow-400 transition-colors" style="color: #969696;">(my account)</a>
 </div>
