--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     const osWindow = document.getElementById("os-window");
     const header = document.getElementById("window-header");
 
-    let isFullscreen = false;
+    let isFullscreen = true;
     let preFullscreenStyle = {};
 
     function closeWindow() {
