--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <div class="col">
                         <a href="list.html" class="box h-half">
                             <div class="bg-img" style="background-image: url('https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExM3Z0bnZ4eGp3eXF6eXF6eXF6eXF6eXF6eXF6eXF6eXF6eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3o6vXVzKWtk4JC6bcU/giphy.gif');"></div>
-                            <h2>LIST</h2>
+                            <h2>list</h2>
                             <p>View</p>
                         </a>
                         
